# RookReader

./: .gitignore  .gitlab-ci.yml  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.ja.md  README.md  biome.json  build-linux.sh  build-windows.sh  build.sh  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wdio.conf.ts
src-tauri/: .env  Cargo.toml  about.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.sqlx/: query-02eda5a6c02dc8f38ae1566212adbafe7de70ff45925574ddcacd1dc99d80fef.json  query-0913e00721e95cb0b484cec1b983ae934c3dc3a102ad0394bbd667dadba42c11.json  query-0ff9ef80ad47f45348ffc3ed60bfc9be5388fc2cdb79e41d91f335e5e0e790e1.json  query-1385df5ff7e300b3c9960b68ca402db34a5082bda4786cb751e36465980b7d2f.json  query-154db72d91f7ef1b437d31a1930cde3b385bed55290829e711085343a8fcbcb3.json  query-18dcb6d0f977c6043409ed81cc374098c421250c4e15079f4c89e4082c277533.json  query-19008e4d5b34df9bbe8263362b344f41afaf28818f6f4b37fc8a63b7243fbd35.json  query-1bfc0e19b613893fba07f19fdbc26cff3a638750f9783a283f15927b189f577b.json  query-1c5b520b8242c9a0ef5c9eee061aa7b7d7daac6995ec81a8a3db955193227535.json  query-20538ea4dcdb8a9b4d663531aac4cdd693c694cebba584f9b1b092d0984db531.json  query-21ce8e18c3d632540b6a7a0c61f0e83dec96806da359f72173c72d61b73a0be3.json  query-22ec47f43456a94c6b93c62f0b4710a192eecd4b39b5120d8b563e1235c5ab6f.json  query-22fb62b1bd7c0eb69755e61956edb585eb05c28b083d0d9bbd608999643439d0.json  query-24c4adf3f50663d0b977c5f7f1f803bcab95957a733ed5444c4b69e239277c63.json  query-293232e440dd660748cfecbf401e8bbfde3f3558499d54c8f585d9419f1a9ab4.json  query-2cf3675febb4df1b31c22cc9a2cfcd5e082d9d13db95a06d1ec3007b4a77b504.json  query-2e44d98170f2c005996c7f7b68808872ff6b162e543dd95c7c511c2b1c076285.json  query-3038a4bbd7a8c165f027904c23231b3458ccb011ec1028e74dd3df70d1f3f006.json  query-3546fdd9b70e8261ba228a68a1b2c78db77d853df63e68bf11b8052b0349b2c9.json  query-3f6f2703d9a20e2ef2e634e85c0a867e4310ef30dedf224c83854099a1a0dd4e.json  query-4c6c50bfd1009943c82291e74a4a90fe2007e3cc9bd4c75ae417590081e3f684.json  query-4e18c44e663a2c48fd6d3b049af097b74f9c734b6efa98435398abe4b4a78a3b.json  query-55bcba832ca3881635fa2c7dad1ee6d65d7f960d6770c5eacaccffa600ecc8b5.json  query-5943ad72032bf4513a3042f4b4143ed4a6ad9d5b2d0a8b67f8f08f33449edcf3.json  query-6b7a32744223a4167b675e5dbf06922ec274ba0d98842f72febb30a13bf69edd.json  query-6b80bd50c2e53d6dc1aac97c6a232db9ed7a17453c98b0bc84d3835e51491ee2.json  query-6d020cfda039f7dda0c56de64cb2cb1961cc64dc9b5acc12537b9d3ff6021b5b.json  query-6faba16a71c77b2ebd1e05a30ca4785f1071e5877fba70740a077b12a98a3dca.json  query-74ab00114a139035bba4303a0ad1c9da7d44c52298e0da38c5d45252c9bfb78d.json  query-84a9ad374b16955f987662ae073bb970ea9a9c136ba90565fde2dad3cf301d1d.json  query-899d38ce58612763d249d54c897ee87003ca18528ce5d3a15855c5bd5a49c898.json  query-8efb385f236ad23234cfe219f95ef2a89723e8af3fb057f15debafabeb7169d6.json  query-8f42687dd985c91724f26c7a775220be38f25cdb96344171ac5af9f980c25c30.json  query-901753cb2641f5c60d237771cca29345f4c4d67a1809cb486de6c5bed8d46f60.json  query-93c9937641fa78e57138258df258dbd725c9d16addf9732f4060d2faa5b66ad2.json  (+27 more)
src-tauri/capabilities/: default.json  desktop.json
(+741 files in other folders)
