[package]
name = "rook-reader"
version = "1.5.2"
description = "Comic Reader"
authors = ["Rookro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Rookro/RookReader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rookreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
flate2 = "1.1.5"
reqwest = { version = "0.12.24", features = ["blocking"] }
tar = "0.4.44"
tauri-build = { version = "2", features = [] }
zip = "6.0.0"

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
zip = "6.0.0"
tauri-plugin-log = "2"
log = "0.4"
image = "0.25"
tauri-plugin-os = "2"
chrono = "0.4.42"
unrar = "0.5.8"
natord = "1.0.9"
tauri-plugin-dialog = "2"
pdfium-render = "0.8.37"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26.1"
tempfile = "3.23.0"
