[package]
name = "rook-reader"
version = "2.0.2"
description = "Comic Reader"
authors = ["Rookro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Rookro/RookReader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rookreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking"] }
tar = "0.4.45"
tauri-build = { version = "2", features = [] }
zip = "8.5.1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
zip = "8.5.1"
tauri-plugin-log = "2"
log = "0.4"
image = "0.25"
tauri-plugin-os = "2"
chrono = { version = "0.4.44", features = ["serde"] }
unrar = "0.5.8"
natord = "1.0.9"
tauri-plugin-dialog = "2"
pdfium-render = "0.8.37"
threadpool = "1.8.1"
thiserror = "2.0.18"
num_cpus = "1.17.0"
dashmap = "6.1.0"
rbook = "0.7.5"
scraper = "0.26.0"
font-kit = "0.14.3"
strum = "0.28.0"
strum_macros = "0.28.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
async-trait = "0.1.89"
tauri-plugin-process = "2"
tokio = { version = "1.52.0", features = ["sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26.1"
tempfile = "3.27.0"
tokio = "1.52.0"
